# ticktick-py-dbt

./: .env.example  .gitignore  .user.yml  README.md  dbt_project.yml  design.md  get_exposures.py  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  requirements.txt  tmp.txt
.github/: pull_request_template.md
.github/workflows/: CD.yml  CI.yml  deployment.sh  gh_deploy.yml  helloworld.yml  slim_CI.yml  trigger_dagster_build.yml
analyses/: active_tags_count.sql  completed_counts.sql  created_counts.sql  daily_metrics_draft.sql  draft.sql  lvl3_helper_list_extract.sql  modified_counts.sql  open_loops_count.sql  tmp.sql
ld_dashboards/charts/: bar-today-count-of-tasks-by-all-time-inbox-and-modified-today-as-next-action.yml  big-number-all-time-count-by-active-list-with-clarifyme.yml  big-number-count-tasks-by-date-overdue.yml  copy-of-count-of-tasks-by-status-today-1728086854360.yml  copy-of-habit-main-1746836482635.yml  copy-of-today-count-of-list-1728086866743.yml  count-of-tasks-by-status-today.yml  habit-main.yml  last-modified-tasks.yml  recurring-habits-time-sensitive.yml  (+5 more)
macros/: cleanup_nulls.sql  clear_schema.sql  coalesce_defaults.sql  common_columns.sql  constant.sql  drop_ci_schema.sql  generate_schema_name.sql  isnull.sql  parse_date.sql  setup_nulls.sql  setup_textsearch.sql  star_cte.sql
models/: _source.yml  exposures.yml
scripts/: get_exposures.py  main.py
seeds/: date_seed.csv  list_goal_mapping_sample.csv
snapshots/: snapshots.yml  snp_folders_raw.sql  snp_lists_raw.sql  snp_tasks_raw.sql
tests/: validate_yaml_schema.sql
(+88 files in other folders)
